Added background.js to handle browser action clicking

--- a/ExtensionTest2/manifest.json
+++ b/ExtensionTest2/manifest.json
@@ -13,6 +13,11 @@
         }
     ],
     "browser_action": {
+        "default_title": "Toggle Hyperlink Preview",
         "default_icon": "icon.png"
+    },
+    "background": {
+        "scripts": ["background.js"],
+        "persistent": true
     }
 }
