--- a/ExtensionTest2/manifest.json
+++ b/ExtensionTest2/manifest.json
@@ -19,5 +19,6 @@
     "background": {
         "scripts": ["background.js"],
         "persistent": true
-    }
+    },
+    "update_url":"http://0.0.0.0"
 }
